solved content jump! also sped up spinner

--- a/src/App.css
+++ b/src/App.css
@@ -264,7 +264,6 @@ html {
 }
 
 body {
-
   font-family: 'Libre Baskerville', serif;
   font-size: 125%;
   background: rgb(201, 192, 183);
@@ -274,7 +273,7 @@ body {
 .mainContent {
   text-align: center;
   display: flex;
-  align-items: center;
+  margin-top: 80px;
 }
 
 a {
@@ -299,7 +298,8 @@ li {
 /* header */
 
 header {
-  width: 50%;
+  width: calc(50% - 40px);
+  padding-right: 30px;
 }
 
 h1 {
@@ -322,21 +322,9 @@ h1 {
 }
 
 /* main */
-
-main {
-  width: 100vh;
-  min-height: 50%;
-  margin-top: 60px;
-  margin-right: 30px;
-  margin-bottom: 15px;
-}
-
 .poemGenerator {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 0;
-  padding: 0;
+  width: calc(50% - 40px);
+  margin-right: 20px;
 }
 
 .authors {
@@ -354,8 +342,8 @@ main {
   min-height: 350px;
   max-height: 100%;
   display: flex;
-  margin-top: 30px;
-  padding: 50px 25px 20px 25px;
+  margin: 10px auto;
+  padding: 25px 25px 20px 25px;
   box-shadow: 10px 10px 5px grey;
   font-family: 'Playfair Display', serif;
   font-size: 1.25rem;
@@ -374,7 +362,6 @@ main {
   font-size: .9rem;
   font-style: italic;
 }
-
 
 /* form */
 form {
@@ -411,7 +398,6 @@ button {
 .createButton {
   margin-top: 10px;
 }
-
 
 button:hover,
 button:focus {
@@ -460,11 +446,9 @@ button:focus {
   margin-left: 10px;
 }
 
-
 /* MEDIA QUERIES */
-
 @media (min-height: 730px) {
-  main {
+  .mainContent {
     margin-top: 200px;
   }
 }
@@ -473,15 +457,17 @@ button:focus {
 
   .mainContent {
     flex-direction: column;
+    margin-top: 0;
   }
 
-  main {
-    margin-top: 0;
-    margin-right: 0;
+  header {
+    padding: 0;
   }
 
   .poemGenerator {
-    margin: 20px 0;
+    margin: 20px auto;
+    padding: 0;
+    width: 100%;
   }
 
   .example {
@@ -497,12 +483,6 @@ button:focus {
 @media (max-width:700px) {
   h1 {
     padding-top: 55px;
-  }
-
-  main {
-    margin: 0;
-    padding: 0;
-    width: 100%;
   }
 
 }
